--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-	"name": "miniframework",
+	"name": "Twitter Clone",
 	"require": {
 		"php": ">= 7.0"
 	},
 	"authors": [
 		{
-			"name": "Jorge Sant Ana",
-			"email": "jorge@teste.com.br"
+			"name": "Othon Santos",
+			"email": "othon.santos.silva@gmail.com"
 		}
 	],
 	"autoload": {
